updated tech task
