# generated_outputs/artifact_agent/net/secure_api_endpoint_for_initiating_password_reset_requests/Models/Requests/PasswordResetRequestCreateRequest.cs
@@ -1,0 +1,7 @@
+namespace SecureApiEndpoint.Models.Requests;
+
+public class PasswordResetRequestCreateRequest
+{
+    public string Email { get; set; } = string.Empty;
+    public string? ResetToken { get; set; }
+}
